<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="20dp">

        <!-- Email Label -->
        <TextView
            android:id="@+id/login__logo"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:ems="10"
            android:fontFamily="@font/muli"
            android:hint="@string/descripcion_titulo"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorTextoLight"
            android:textSize="40sp" />

        <!-- Password Label -->

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="204dp"
            android:contentDescription="@string/login__imagen_descripcion"
            android:paddingTop="20dp"
            app:srcCompat="@drawable/foto1" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorTextoLight"
            android:padding="0dp"
            android:text="@string/login__iniciar_sesion_google" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login__iniciar_sesion_correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorTextoLight"
            android:textColorHint="@color/colorTextoLight_t1" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login__iniciar_sesion_contrasena"
            android:inputType="textPassword"
            android:textColor="@color/colorTextoLight"
            android:textColorHint="@color/colorTextoLight_t1" />

        <Button
            android:id="@+id/boton_inicio_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorTextoLight"
            android:text="@string/login__boton_iniciar_sesion"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>
</ScrollView>