<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CarritoActivity2"
    tools:showIn="@layout/app_bar_carrito2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="518dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:contentDescription="@string/imagen__descripcion"
                app:srcCompat="@drawable/plato1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/imagen1__nombre"
                android:textAlignment="center"
                android:textColor="@color/colorTextoDark_t1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imagen1__precio"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/carrito_precio1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:contentDescription="@string/imagen__descripcion"
                app:srcCompat="@drawable/plato2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/imagen2__nombre"
                android:textAlignment="center"
                android:textColor="@color/colorTextoDark_t1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imagen2__precio"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/carrito_precio2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/carrito_boton_completar_transaccion"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="1dp"
                android:text="@string/carrito_comprar" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>