<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mi_toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:logo="@drawable/baseline_menu_white_24"
        app:logoDescription="@string/descripcion_menu"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"
        app:titleMarginStart="30dp"
        app:titleTextColor="@color/colorTextoLight" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="518dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mi_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:contentDescription="@string/imagen__descripcion"
                app:srcCompat="@drawable/plato1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/imagen1__nombre"
                android:textAlignment="center"
                android:textColor="@color/colorTextoDark_t1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/imagen1__descripcion"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imagen1__precio"
                android:textAlignment="center" />

            <Button
                android:id="@+id/boton_carrito"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="1dp"
                android:text="@string/imagen__boton_carrito" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:contentDescription="@string/imagen__descripcion"
                app:srcCompat="@drawable/plato2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/imagen2__nombre"
                android:textAlignment="center"
                android:textColor="@color/colorTextoDark_t1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/imagen1__descripcion"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imagen2__precio"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button4"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="1dp"
                android:text="@string/imagen__boton_carrito" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:contentDescription="@string/imagen__descripcion"
                app:srcCompat="@drawable/plato3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/imagen1__nombre"
                android:textAlignment="center"
                android:textColor="@color/colorTextoDark_t1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/imagen3__descripcion"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imagen3__precio"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="1dp"
                android:text="@string/imagen__boton_carrito" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:contentDescription="@string/imagen__descripcion"
                app:srcCompat="@drawable/plato4" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/imagen4__nombre"
                android:textAlignment="center"
                android:textColor="@color/colorTextoDark_t1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/imagen4__descripcion"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imagen3__precio"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button2"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="1dp"
                android:text="@string/imagen__boton_carrito" />
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>