<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistorialPedidosFragment"
    tools:showIn="@layout/activity_historial_pedidos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="518dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:contentDescription="@string/imagen__descripcion"
                app:srcCompat="@drawable/plato1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/imagen1__nombre"
                android:textAlignment="center"
                android:textColor="@color/colorTextoDark_t1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/historial_cantidad1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:contentDescription="@string/imagen__descripcion"
                app:srcCompat="@drawable/plato2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/imagen2__nombre"
                android:textAlignment="center"
                android:textColor="@color/colorTextoDark_t1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/historial_cantidad2"
                android:textAlignment="center"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:contentDescription="@string/imagen__descripcion"
                app:srcCompat="@drawable/plato3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/imagen1__nombre"
                android:textAlignment="center"
                android:textColor="@color/colorTextoDark_t1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/historial_cantidad3"
                android:textAlignment="center"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:contentDescription="@string/imagen__descripcion"
                app:srcCompat="@drawable/plato4" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/imagen4__nombre"
                android:textAlignment="center"
                android:textColor="@color/colorTextoDark_t1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/historial_cantidad4"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>